@@ -463,7 +463,11 @@ BOOL cg_thread_stop_with_cond(CgThread *thread, CgCond *cond)
 		b_ter_tsk(thread->taskID);
 #else
 		cg_log_debug_s("Killing thread %p\n", thread);
-		pthread_kill(thread->pThread, SIGQUIT);
+		#if  defined(TARGET_OS_MAC) || defined(TARGET_OS_IPHONE)
+		pthread_kill(thread->pThread, 0);
+		#else
+		 pthread_kill(thread->pThread, SIGQUIT);
+		#endif
 		/* MODIFICATION Fabrice Fontaine Orange 24/04/2007
 		cg_log_debug_s("Thread %p signalled, joining.\n", thread);
 		pthread_join(thread->pThread, NULL);
